# IDLBridge

./: README  idl_export.pxi  idlbridge.pyx  pyproject.toml  setup.py
idlbridge/: __init__.py  _core.pyx  _version.py  idl_export.pxi
idlbridge/tests/: __init__.py  test_idlbridge.py
tests/: test_idlbridge.py
