[build-system]
requires = ["setuptools", "numpy", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "idlbridge"
version = "1.1.1"
description="An IDL wrapper for Python"
readme = "README"
authors = [
  {name = "Dr. Alex Meakins", email="alex.meakins@ukaea.uk"}
]
license = {text = "LGPLv3"}
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Cython",
  "Programming Language :: Python :: Implementation :: CPython",
  "Operating System :: POSIX :: Linux",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy",
  "cython"
]
